--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   avatar           : "profile.png"
   name             : "Istiyak Amin"
   pronouns         : # example: "she/her"
-  bio              : "Strong software engineering background and research interests in Quantum Computing with Machine Learning"
+  bio              : "AI Automation Expert | Aspiring Data Scientist | Quantum Machine Learning | A Problem Solver"
   location         : "Cyberjaya, Malaysia"
   employer         : "Multimedia University"
   uri              : # URL
